clean: update the infra
Makes tests pass, clean up the bazel files

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,9 +1,8 @@
 # LICENSE sha256: c71d239df91726fc519c6eb72d318ec65820627232b2f796219e87dcf35d0ab4
-
 load("@gazelle//:def.bzl", "gazelle")
+load("@rules_shell//shell:sh_test.bzl", "sh_test")
 
 # bazel run //:gazelle
-# XXX: edit importpath
 # gazelle:prefix github.com/filmil/xrootfs
 gazelle(name = "gazelle")
 
@@ -23,4 +22,9 @@ gazelle(
         "-prune",
     ],
     command = "update-repos",
+)
+
+sh_test(
+    name = "test",
+    srcs = [ "test.sh" ],
 )
