--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Build
         run: "bazel build //..."
       - name: Test
-        run: "bazel test //..."
+        run: "bazel test --test_output=errors //..."
 
