--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -19,10 +19,14 @@ go_sdk.download(version = "1.25.0")
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
 
-
 # multitool
 bazel_dep(name = "rules_multitool", version = "1.9.0")
+
 multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
-multitool.hub(hub_name = "xrootfs_multitool", lockfile = "//:multitool.lock.json")
-use_repo(multitool, "xrootfs_multitool")
+multitool.hub(
+    hub_name = "xrootfs_multitool",
+    lockfile = "//:multitool.lock.json",
+)
+use_repo(multitool, "multitool", "xrootfs_multitool")
+
 register_toolchains("@xrootfs_multitool//toolchains:all")
